# UV-DjangoRestFrameWork

./: .env.example  .gitignore  DEPLOY_RENDER.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js
apps/code_converter_uml/: README.md  __init__.py  apps.py  forms.py  urls.py  views.py
apps/code_to_bpmn/: apps.py  forms.py  urls.py  views.py
apps/codegenerator/: __init__.py  apps.py  forms.py  urls.py  views.py
apps/contact/: form.py  urls.py  views.py
apps/experience/: apps.py  models.py  urls.py  views.py
apps/pipeline_generator/: __init__.py  apps.py  forms.py  urls.py  views.py
apps/users/: forms.py  models.py  services.py  urls.py  views.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
content/markdown/: Django_uv_htmx.md  Django_uv_htmx_forms.md  README.md  bienvenue.md  guide-tailwind-complet.md  vscode-trim-whitespace-powershell.md
scripts/: build_css.py  init_project.sh
static/css/: base.css  tailwind.css
static/js/: auth_tabs.js
static/models/: drone.glb  friend.glb  puddle_jumper.glb  wraith_ship.glb
staticfiles/: staticfiles.json
staticfiles/models/: asteroid_explo.47e66a6f30da.glb  atlante_boss.a57e21cd38ea.glb  stargate.1dd7c716f6dc.glb
templates/: 404.html  base.html  documents.html  generation_tools.html  index.html  public_profile.html
templates/code_converter_uml/: index.html  page.html
templates/code_to_bpmn/: index.html  page.html
templates/codegenerator/: index.html  page.html
templates/contact/: form.html  page.html
(+102 files in other folders)
